# todoist-rs

./: .drone.yml  Cargo.toml  README.md  RELEASE.md
hack/scripts/: publish.sh
lib/libtodoist/: Cargo.toml  README.md
lib/libtodoist/fixtures/sections/: get.json  list.json
lib/libtodoist/src/: enums.rs  lib.rs  models.rs
lib/libtodoist/src/api/: comment.rs  label.rs  mod.rs  project.rs  section.rs  task.rs
lib/todoist/: Cargo.toml
lib/todoist/src/: enums.rs  error.rs  lib.rs  models.rs
lib/todoist/src/api/: comment.rs  mod.rs  project.rs  section.rs  task.rs
