[package]
name = "libtodoist"
version = "0.4.0"
edition = "2021"
authors = ["Balazs Nadasdi <efertone@pm.me>"]
license = "Apache-2.0 AND MIT"
homepage = "https://github.com/yitsushi/todoist-rs"
repository = "https://github.com/yitsushi/todoist-rs"
description = "Rust wrapper around Todoist API"
readme = "README.md"
keywords = ["todoist", "todo", "task", "project", "todoist"]
categories = ["data-structures", "web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_repr = "0.1.18"

[dev-dependencies]
mockito = "1.2.0"
rust-embed = "8.2.0"
tokio = { version = "1.35.1", features = ["macros"] }
